--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -22,14 +22,12 @@
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   </div>
-  <div class="form-control form-control-check">
-    <label for="reminder">Set Reminder</label>
-    <input
-      type="checkbox"
-      name="reminder"
-      [(ngModel)]="reminder"
-      id="reminder"
-    />
-  </div>
+
+  <div class="form-control">
+    <label for="reminder">Set a time</label>
+  <input [ngxTimepicker]="timepicker">
+<ngx-material-timepicker #timepicker></ngx-material-timepicker>
+</div>
   <input type="submit" value="Save Task" class="btn btn-block" />
+
 </form>
