--- a/src/styles.css
+++ b/src/styles.css
@@ -78,3 +78,8 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-toolbar-row, .mat-toolbar-single-row{
+  background:#00bfff;
+  color:#fff;
+}
